# scip-ghc-plugin

./: .gitignore  CHANGELOG.md  Readme  Readme.md  ghcplugin.cabal  me.patch  result.txt  scip-ghc-plugin.cabal
.github/workflows/: haskell.yml
data/src/: ModuleA.hs  MyLib.hs
plugin/: EntityInfoKind.hs  MyPlugin.hs  SCIPGHCPlugin.hs  ScipGhcPlugin.hs
plugin/Ext/: Ast.hs  Binary.hs  Debug.hs  Fields.hs  Types.hs  Utils.hs
src/: ModuleA.hs  MyLib.hs
testsrc/: MyLib.hs
